# testTravelWebSiteProject

./: pyproject.toml  report.html  xmlreport.xml
pages/: index_page.py  index_page_locators.py  register_page.py
resources/: constants.py
tests/: test_login.py  test_utils.py
