[tool.poetry]
name = "testtravelwebsiteproject 2"
version = "0.1.0"
description = ""
authors = ["Anastasiya <anastasia.nosich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.11.2"
pytest = "^7.4.0"
junit-xml = "^1.9"
pytest-html = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
